[tool.poetry]
name = "weatherstations"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"
tensorflow = "^2.4.1"
matplotlib = "^3.3.4"
pytest = "^6.2.2"
scikit-learn = "^0.24.1"
Boruta = "^0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
